[package]
name = "kiwiyou-bot"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
lambda_http = "0.1"
lambda_runtime = "0.2"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rusoto_core = { version = "0.43.0", default-features = false }
rusoto_dynamodb = "0.43.0"
serde_json = "1.0"
surf = "2.0.0-alpha.2"
teloxide = "0.2"
tokio = "0.2"
unhtml = "0.7.5"
unhtml_derive = "0.7.5"

[patch.crates-io]
cfg-if = { git = 'https://github.com/alexcrichton/cfg-if', tag = '0.1.10' }
